booking page made

--- a/src/pages/booking/Booking.css
+++ b/src/pages/booking/Booking.css
@@ -1,4 +1,4 @@
-.booking-container {
+/* .booking-container {
   padding-top: 70px;
   display: flex;
   flex-direction: column;
@@ -70,4 +70,4 @@
 
 .next-button:hover {
   background-color: #1976D2;
-}
+} */
